--- a/app/src/main/res/layout/person_bill_detail.xml
+++ b/app/src/main/res/layout/person_bill_detail.xml
@@ -7,114 +7,116 @@
     android:padding="10dp"
     tools:context=".view.PersonActivity">
 
-    <LinearLayout
-        android:id="@+id/nameLl"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Nome:"
-            android:textSize="20dp"
-            />
-
-        <EditText
-            android:id="@+id/nameEt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName" />
-
-    </LinearLayout>
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="381dp"
+        android:layout_height="44dp"
+        android:text="Detalhe do pagamento"
+        android:textSize="35dp"
+        tools:layout_editor_absoluteX="10dp"
+        tools:layout_editor_absoluteY="3dp" />
 
     <LinearLayout
-        android:id="@+id/valorPagoLl"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameLl">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingTop="200dp"
+        tools:layout_editor_absoluteX="10dp"
+        tools:layout_editor_absoluteY="10dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Valor pago:"
-            android:textSize="20dp"
-            />
-
-        <EditText
-            android:id="@+id/valorPagoEt"
+        <LinearLayout
+            android:id="@+id/nameLl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="numberDecimal"/>
+            android:orientation="horizontal">
 
-    </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Nome:"
+                android:textSize="20dp" />
 
-    <LinearLayout
-        android:id="@+id/comprasLl"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/valorPagoLl">
+            <EditText
+                android:id="@+id/nameEt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textPersonName" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Compras:"
-            android:textSize="20dp"
-            />
+        </LinearLayout>
 
-        <EditText
-            android:id="@+id/comprasEt"
+        <LinearLayout
+            android:id="@+id/valorPagoLl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"/>
+            android:orientation="horizontal">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Valor pago:"
+                android:textSize="20dp" />
 
-    </LinearLayout>
+            <EditText
+                android:id="@+id/valorPagoEt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="numberDecimal" />
 
-    <LinearLayout
-        android:id="@+id/dividaLl"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/comprasLl">
+        </LinearLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Valor a pagar:"
-            android:textSize="20dp"
-            />
-
-        <EditText
-            android:id="@+id/dividaEt"
+        <LinearLayout
+            android:id="@+id/comprasLl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="numberDecimal"
-            android:enabled="false"/>
+            android:orientation="horizontal">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Compras:"
+                android:textSize="20dp" />
+
+            <EditText
+                android:id="@+id/comprasEt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/dividaLl"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Valor a pagar:"
+                android:textSize="20dp" />
+
+            <EditText
+                android:id="@+id/dividaEt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:enabled="false"
+                android:inputType="numberDecimal" />
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/saveBt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="0dp"
+            android:layout_marginTop="270dp"
+            android:text="save" />
     </LinearLayout>
 
 
-    <Button
-        android:id="@+id/saveBt"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="save"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dividaLl" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
