--- a/app/src/main/res/layout/list_participants.xml
+++ b/app/src/main/res/layout/list_participants.xml
@@ -7,7 +7,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    android:background="@color/branco">
+    android:background="@color/branco"
+    tools:context=".view.ListParticipants">
 
     <TextView
         android:layout_width="wrap_content"
@@ -26,7 +27,7 @@
         android:layout_weight="1"
         android:divider="@color/preto"
         android:dividerHeight="1dp"
-        android:background="@color/branco" />
+        android:background="@color/branco"/>
 
     <Button
         android:layout_width="wrap_content"
