--- a/app/src/main/res/layout/person_component.xml
+++ b/app/src/main/res/layout/person_component.xml
@@ -19,9 +19,10 @@
         android:orientation="horizontal">
 
         <TextView
+        android:id="@+id/pagarOuReceberTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Valor pago: R$"
+            android:text="Valor a pagar: R$"
             android:textSize="20sp"
             android:padding="5dp"/>
 
