--- a/app/src/main/res/layout/person_bill_detail.xml
+++ b/app/src/main/res/layout/person_bill_detail.xml
@@ -20,7 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:paddingTop="200dp"
+        android:paddingTop="100dp"
         tools:layout_editor_absoluteX="10dp"
         tools:layout_editor_absoluteY="10dp">
 
@@ -51,23 +51,50 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/comprasLl1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:orientation="horizontal">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Valor pago:"
+                android:text="Compra 1:"
                 android:textSize="20dp" />
 
             <EditText
-                android:id="@+id/valorPagoEt"
-                android:layout_width="match_parent"
+                android:id="@+id/nameCompra1"
+                android:layout_width="102dp"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="numberDecimal" />
+                android:text="nome" />
+
+            <EditText
+                android:id="@+id/valorCompra1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="text"
+                android:text="valor" />
+
+            <EditText
+                android:id="@+id/descCompra1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="text"
+                android:text="descrição" />
 
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/comprasLl"
+            android:id="@+id/comprasLl2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -75,15 +102,72 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Compras:"
+                android:text="Compra 2:"
                 android:textSize="20dp" />
 
             <EditText
-                android:id="@+id/comprasEt"
-                android:layout_width="match_parent"
+                android:id="@+id/nameCompra2"
+                android:layout_width="102dp"
                 android:layout_height="wrap_content"
-                android:ems="10" />
+                android:ems="10"
+                android:text="nome" />
 
+            <EditText
+                android:id="@+id/valorCompra2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="text"
+                android:text="valor" />
+
+            <EditText
+                android:id="@+id/descCompra2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="text"
+                android:text="descrição" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/comprasLl3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="50dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Compra 3:"
+                android:textSize="20dp" />
+
+            <EditText
+                android:id="@+id/nameCompra3"
+                android:layout_width="102dp"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:text="nome" />
+
+            <EditText
+                android:id="@+id/valorCompra3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="text"
+                android:text="valor" />
+
+            <EditText
+                android:id="@+id/descCompra3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="text"
+                android:text="descrição" />
 
         </LinearLayout>
 
@@ -114,7 +198,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="0dp"
-            android:layout_marginTop="270dp"
+            android:layout_marginTop="200dp"
             android:text="save" />
     </LinearLayout>
 
