--- a/app/src/main/res/layout/person_component.xml
+++ b/app/src/main/res/layout/person_component.xml
@@ -19,23 +19,64 @@
         android:orientation="horizontal">
 
         <TextView
-        android:id="@+id/pagarOuReceberTv"
+            android:id="@+id/valorAPagarTextTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:padding="5dp"
             android:text="Valor a pagar: R$"
-            android:textSize="20sp"
-            android:padding="5dp"/>
+            android:textSize="20sp" />
 
         <TextView
-            android:id="@+id/valorpagoTv"
+            android:id="@+id/valorCalcAPagarTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="valor pago"
-            android:textSize="20sp"
-            android:textColor="@android:color/holo_red_dark"/>
+            android:text="valor a pagar"
+            android:textColor="@android:color/holo_red_dark"
+            android:textSize="20sp" />
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+        <TextView
+                android:id="@+id/valorPagoTextTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:text="Valor pago: R$"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/valorPagoTv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="valor pago"
+                android:textSize="20sp"
+                android:textColor="@android:color/holo_red_dark"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+        <TextView
+                android:id="@+id/comprasTextTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:text="Compras:"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/comprasTv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textSize="20sp"
+                android:textColor="@android:color/holo_red_dark"/>
+    </LinearLayout>
 
 
 </LinearLayout>
